--- a/concept/concept.tex
+++ b/concept/concept.tex
@@ -55,4 +55,5 @@ Works as a Senior Lecturer at University College in Østfold at their department
 \section{Early idea concept}
 Our roBOT, named \textit{Breeze}, will solve, or at least lessen the effects of, the "Facilitating further discussion" problem. We believe that a chat where students discuss a topic is a good solution.
 
+\input{appendix}
 \end{document}
