--- a/ideation/ideation.tex
+++ b/ideation/ideation.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[a4paper]{article}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
@@ -15,12 +15,7 @@
 \author{Sindre Hansen \and Vegard Helgesen Hesselberg \and Eirik Rismyhr \and Stian Sørli}
 \date{Spring 2017}
 
-
 \begin{document}
-\begin{figure}
-  \centering
-  \includegraphics[width=0.5\textwidth]{images/logontnu_eng}
-\end{figure}
 \maketitle
 \rule{\linewidth}{0.5mm}
 
